# ansible-butler

./: .gitignore  MANIFEST.in  README.md  __main__.py  package.sh  pyproject.toml  setup.cfg
.github/: CODEOWNERS
ansiblebutler/: __init__.py  __main__.py
ansiblebutler/common/: .ansible-butler.yml  __init__.py  auth.py  butler_dumper.py  dependencies.py  plugin_map.yml
ansiblebutler/directory/: __init__.py  _clean.py  _initialize.py  structure.yml
ansiblebutler/directory/configs/: .ansible-lint
ansiblebutler/directory/templates/: playbook.yml.j2  structure.yml
ansiblebutler/execution_environment/: __init__.py  _dependencies.py  _initialize.py  _inspect.py
ansiblebutler/execution_environment/templates/: execution-environment-v3.yml.j2  execution-environment.yml.j2  requirements.txt.j2  requirements.yml.j2
ansiblebutler/playbook/: __init__.py  _list_collections.py  _update.py
ansiblebutler/role/: __init__.py  _clean.py  _deps.py  _list.py  _mkreadme.py
ansiblebutler/role/templates/: README.md.j2  graph.html.j2
ansiblebutler/roles/: __init__.py  _clean.py  _common.py  _mkreadme.py  roles.py
ansiblebutler/roles/templates/: README.md.j2
ansiblebutler/template/: __init__.py  _clone.py  _constants.py
docs/config/: .ansible-butler.custom-configs.yml  .ansible-butler.module-redirects.yml  .ansible-butler.test-plugins.yml
roles/: __init__.py  _clean.py  _list.py  _mkreadme.py  list.py  roles.py
tests/common/: test_common.py
tests/common/configs/: ansible-butler.expected.yml  ansible-butler.yml
tests/playbook/: test_playbook_update.py
(+15 files in other folders)
