[metadata]
name = ansible-butler
version = 1.1.1
author = Zach LeBlanc
author_email = zjleblanc3@gmail.com
description = A butler CLI for assistance in managing Ansible projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zjleblanc/ansible-butler
project_urls =
    Bug Tracker = https://github.com/zjleblanc/ansible-butler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  docopt>=0.6.2
  PyYAML>=5.4.1
  Jinja2>=3.0.0
  mergedeep>=1.3.4
  ansible-lint>=6.17.2
  requirements-parser>=0.5.0

[options.entry_points]
console_scripts =
  ansible-butler = ansiblebutler:main